--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -1,34 +1,97 @@
 ---
 he:
+  activerecord:
+    models:
+      country: מדינה
+      event: אירוע
+      option: אפשרות
+      minister:
+        one: "שר"
+        other: "שרים"
+      goal: מטרה אישית
+      fact: עובדה
+    attributes:
+      country:
+        resilience:     "חוסן חברתי"
+        init_civ:       "מספר התחלתי של אזרחים"
+        civ_num:        "מספר נוכחי של אזרחים"
+        deg:            "רמת התחממות"
+        life_level:     "רמת חיים"
+        score:          "תוצאה"
+        year:           "שנה"
+        reg_rel:        "יחסים אזוריים"
+        agriculture:    "חקלאות"
+        education:      "חינוך"
+        security:       "ביטחון"
+        comms:          "תקשורת"
+        social_sec:     "ביטוח לאומי"
+        health:         "בריאות"
+        water:          "מים"
+        energy:         "אנרגיה"
+        name:           "שם"
+        budget:         "תקציב"
+      event:
+        title:          "כותרת"
+        description:    "תיאור"
+        min_deg:        "רמת התחממות מינימלית"
+      option:
+        title:          "כותרת"
+      Minister:
+        role:           "תפקיד"
+        description:    "תיאור"
+      Goal:
+        description:    "תיאור"
+      Fact:
+        content:        "תוכן"
+
+  application:
+    home_page:
+      title: "ברוכות הבאות למשחק: זה משנה הכל"
+      description: "הקפיטליזם משמיד את כדור הארץ. חושבות שאתן יכולות להתמודד עם זה?"
+      players: "כמה שחקנים ושחקניות:"
+      new_game: "משחק חדש"
+      minister_count: "עד %{count} שחקנים ושחקניות"
+    game_over:
+      title: "המשחק נגמר!"
+  minister:
+    index:
+      start_game: "התחלה"
+      next: "הבא"
+      next_player: "שחקן הבא"
+  event:
+    show:
+      choose_option: "בחירת אפשרות"
+      consequense: "השלכה"
+
   simple_form:
-    errors:
-      format: "%{attribute} %{message}"
-      messages:
-        accepted: חייב באישור
-        blank: לא יכול להיות ריק
-        confirmation: לא תואם לאישורו
-        empty: לא יכול להיות ריק
-        equal_to: חייב להיות שווה ל- %{count}
-        even: חייב להיות זוגי
-        exclusion: לא זמין
-        greater_than: חייב להיות גדול מ- %{count}
-        greater_than_or_equal_to: חייב להיות גדול או שווה ל- %{count}
-        inclusion: לא נכלל ברשימה
-        invalid: לא תקין
-        less_than: חייב להיות קטן מ- %{count}
-        less_than_or_equal_to: חייב להיות קטן או שווה ל- %{count}
-        not_a_number: חייב להיות מספר
-        not_an_integer: חייב להיות מספר שלם
-        odd: חייב להיות אי זוגי
-        taken: כבר בשימוש
-        too_long: ארוך מדי (יותר מ- %{count} תווים)
-        too_short: קצר מדי (פחות מ- %{count} תווים)
-        wrong_length: לא באורך הנכון (חייב להיות %{count} תווים)
-      template:
-        body: 'אנא בדוק את השדות הבאים:'
-        header:
-          one: 'לא ניתן לשמור את ה%{model}: שגיאה אחת'
-          other: 'לא ניתן לשמור את ה%{model}: %{count} שגיאות.'
+  #   errors:
+  #     format: "%{attribute} %{message}"
+  #     messages:
+  #       accepted: חייב באישור
+  #       blank: לא יכול להיות ריק
+  #       confirmation: לא תואם לאישורו
+  #       empty: לא יכול להיות ריק
+  #       equal_to: חייב להיות שווה ל- %{count}
+  #       even: חייב להיות זוגי
+  #       exclusion: לא זמין
+  #       greater_than: חייב להיות גדול מ- %{count}
+  #       greater_than_or_equal_to: חייב להיות גדול או שווה ל- %{count}
+  #       inclusion: לא נכלל ברשימה
+  #       invalid: לא תקין
+  #       less_than: חייב להיות קטן מ- %{count}
+  #       less_than_or_equal_to: חייב להיות קטן או שווה ל- %{count}
+  #       not_a_number: חייב להיות מספר
+  #       not_an_integer: חייב להיות מספר שלם
+  #       odd: חייב להיות אי זוגי
+  #       taken: כבר בשימוש
+  #       too_long: ארוך מדי (יותר מ- %{count} תווים)
+  #       too_short: קצר מדי (פחות מ- %{count} תווים)
+  #       wrong_length: לא באורך הנכון (חייב להיות %{count} תווים)
+  #     template:
+  #       body: 'אנא בדוק את השדות הבאים:'
+  #       header:
+  #         one: 'לא ניתן לשמור את ה%{model}: שגיאה אחת'
+  #         other: 'לא ניתן לשמור את ה%{model}: %{count} שגיאות.'
     helpers:
       select:
         prompt: נא לבחור
@@ -36,214 +99,214 @@ he:
         create: יצירת %{model}
         submit: שמור %{model}
         update: עדכון %{model}
-    labels:
-      defaults:
-        username: 'User name'
-        password: 'Password'
-        new:
-          username: 'Choose a user name'
-    hints:
-      defaults:
-        username: 'User name to sign in.'
-        password: 'No special characters, please.'
-    placeholders:
-      defaults:
-        username: 'Your username'
-        password: '****'
-
-  activerecord:
-    errors:
-      messages:
-        record_invalid: 'האימות נכשל: %{errors}'
-  date:
-    abbr_day_names:
-    - א
-    - ב
-    - ג
-    - ד
-    - ה
-    - ו
-    - ש
-    abbr_month_names:
-    -
-    - ינו
-    - פבר
-    - מרץ
-    - אפר
-    - מאי
-    - יונ
-    - יול
-    - אוג
-    - ספט
-    - אוק
-    - נוב
-    - דצמ
-    day_names:
-    - ראשון
-    - שני
-    - שלישי
-    - רביעי
-    - חמישי
-    - שישי
-    - שבת
-    formats:
-      default: "%d-%m-%Y"
-      long: "%e ב%B, %Y"
-      short: "%e %b"
-    month_names:
-    -
-    - ינואר
-    - פברואר
-    - מרץ
-    - אפריל
-    - מאי
-    - יוני
-    - יולי
-    - אוגוסט
-    - ספטמבר
-    - אוקטובר
-    - נובמבר
-    - דצמבר
-    order:
-    - :day
-    - :month
-    - :year
-  datetime:
-    distance_in_words:
-      about_x_hours:
-        one: בערך שעה אחת
-        other: בערך %{count} שעות
-      about_x_months:
-        one: בערך חודש אחד
-        other: בערך %{count} חודשים
-      about_x_years:
-        one: בערך שנה אחת
-        other: בערך %{count} שנים
-      almost_x_years:
-        one: כמעט שנה
-        other: כמעט %{count} שנים
-      half_a_minute: חצי דקה
-      less_than_x_seconds:
-        zero: פחות משניה אחת
-        one: פחות משניה אחת
-        other: פחות מ- %{count} שניות
-      less_than_x_minutes:
-        zero: פחות מדקה אחת
-        one: פחות מדקה אחת
-        other: פחות מ- %{count} דקות
-      over_x_years:
-        one: מעל שנה אחת
-        other: מעל %{count} שנים
-      x_seconds:
-        one: שניה אחת
-        other: "%{count} שניות"
-      x_minutes:
-        one: דקה אחת
-        other: "%{count} דקות"
-      x_days:
-        one: יום אחד
-        other: "%{count} ימים"
-      x_months:
-        one: חודש אחד
-        other: "%{count} חודשים"
-    prompts:
-      second: שניות
-      minute: דקה
-      hour: שעה
-      day: יום
-      month: חודש
-      year: שנה
-  errors:
-    format: "%{attribute} %{message}"
-    messages:
-      accepted: חייב באישור
-      blank: לא יכול להיות ריק
-      confirmation: לא תואם לאישורו
-      empty: לא יכול להיות ריק
-      equal_to: חייב להיות שווה ל- %{count}
-      even: חייב להיות זוגי
-      exclusion: לא זמין
-      greater_than: חייב להיות גדול מ- %{count}
-      greater_than_or_equal_to: חייב להיות גדול או שווה ל- %{count}
-      inclusion: לא נכלל ברשימה
-      invalid: לא תקין
-      less_than: חייב להיות קטן מ- %{count}
-      less_than_or_equal_to: חייב להיות קטן או שווה ל- %{count}
-      not_a_number: חייב להיות מספר
-      not_an_integer: חייב להיות מספר שלם
-      odd: חייב להיות אי זוגי
-      taken: כבר בשימוש
-      too_long: ארוך מדי (יותר מ- %{count} תווים)
-      too_short: קצר מדי (פחות מ- %{count} תווים)
-      wrong_length: לא באורך הנכון (חייב להיות %{count} תווים)
-    template:
-      body: 'אנא בדוק את השדות הבאים:'
-      header:
-        one: 'לא ניתן לשמור את ה%{model}: שגיאה אחת'
-        other: 'לא ניתן לשמור את ה%{model}: %{count} שגיאות.'
-  helpers:
-    select:
-      prompt: נא לבחור
-    submit:
-      create: יצירת %{model}
-      submit: שמור %{model}
-      update: עדכון %{model}
-  number:
-    currency:
-      format:
-        delimiter: ","
-        format: "%n %u"
-        precision: 2
-        separator: "."
-        significant: false
-        strip_insignificant_zeros: false
-        unit: "₪"
-    format:
-      delimiter: ","
-      precision: 3
-      separator: "."
-      significant: false
-      strip_insignificant_zeros: false
-    human:
-      decimal_units:
-        format: "%n %u"
-        units:
-          billion: מיליארד
-          million: מיליון
-          quadrillion: קודריליון
-          thousand: אלף
-          trillion: טריליון
-          unit: ''
-      format:
-        delimiter: ''
-        precision: 3
-        significant: true
-        strip_insignificant_zeros: true
-      storage_units:
-        format: "%n %u"
-        units:
-          byte:
-            one: בייט
-            other: בתים
-          gb: ג'יגה-בייט
-          kb: קילו-בייט
-          mb: מגה-בייט
-          tb: טרה-בייט
-    percentage:
-      format:
-        delimiter: ''
-    precision:
-      format:
-        delimiter: ''
-  support:
-    array:
-      last_word_connector: " ו"
-      two_words_connector: " ו"
-      words_connector: ", "
-  time:
-    am: am
-    formats:
-      default: "%a %d %b %H:%M:%S %Z %Y"
-      long: "%d ב%B, %Y %H:%M"
-      short: "%d %b %H:%M"
-    pm: pm
+  #   labels:
+  #     defaults:
+  #       username: 'User name'
+  #       password: 'Password'
+  #       new:
+  #         username: 'Choose a user name'
+  #   hints:
+  #     defaults:
+  #       username: 'User name to sign in.'
+  #       password: 'No special characters, please.'
+  #   placeholders:
+  #     defaults:
+  #       username: 'Your username'
+  #       password: '****'
+  #
+  # activerecord:
+  #   errors:
+  #     messages:
+  #       record_invalid: 'האימות נכשל: %{errors}'
+  # date:
+  #   abbr_day_names:
+  #   - א
+  #   - ב
+  #   - ג
+  #   - ד
+  #   - ה
+  #   - ו
+  #   - ש
+  #   abbr_month_names:
+  #   -
+  #   - ינו
+  #   - פבר
+  #   - מרץ
+  #   - אפר
+  #   - מאי
+  #   - יונ
+  #   - יול
+  #   - אוג
+  #   - ספט
+  #   - אוק
+  #   - נוב
+  #   - דצמ
+  #   day_names:
+  #   - ראשון
+  #   - שני
+  #   - שלישי
+  #   - רביעי
+  #   - חמישי
+  #   - שישי
+  #   - שבת
+  #   formats:
+  #     default: "%d-%m-%Y"
+  #     long: "%e ב%B, %Y"
+  #     short: "%e %b"
+  #   month_names:
+  #   -
+  #   - ינואר
+  #   - פברואר
+  #   - מרץ
+  #   - אפריל
+  #   - מאי
+  #   - יוני
+  #   - יולי
+  #   - אוגוסט
+  #   - ספטמבר
+  #   - אוקטובר
+  #   - נובמבר
+  #   - דצמבר
+  #   order:
+  #   - :day
+  #   - :month
+  #   - :year
+  # datetime:
+  #   distance_in_words:
+  #     about_x_hours:
+  #       one: בערך שעה אחת
+  #       other: בערך %{count} שעות
+  #     about_x_months:
+  #       one: בערך חודש אחד
+  #       other: בערך %{count} חודשים
+  #     about_x_years:
+  #       one: בערך שנה אחת
+  #       other: בערך %{count} שנים
+  #     almost_x_years:
+  #       one: כמעט שנה
+  #       other: כמעט %{count} שנים
+  #     half_a_minute: חצי דקה
+  #     less_than_x_seconds:
+  #       zero: פחות משניה אחת
+  #       one: פחות משניה אחת
+  #       other: פחות מ- %{count} שניות
+  #     less_than_x_minutes:
+  #       zero: פחות מדקה אחת
+  #       one: פחות מדקה אחת
+  #       other: פחות מ- %{count} דקות
+  #     over_x_years:
+  #       one: מעל שנה אחת
+  #       other: מעל %{count} שנים
+  #     x_seconds:
+  #       one: שניה אחת
+  #       other: "%{count} שניות"
+  #     x_minutes:
+  #       one: דקה אחת
+  #       other: "%{count} דקות"
+  #     x_days:
+  #       one: יום אחד
+  #       other: "%{count} ימים"
+  #     x_months:
+  #       one: חודש אחד
+  #       other: "%{count} חודשים"
+  #   prompts:
+  #     second: שניות
+  #     minute: דקה
+  #     hour: שעה
+  #     day: יום
+  #     month: חודש
+  #     year: שנה
+  # errors:
+  #   format: "%{attribute} %{message}"
+  #   messages:
+  #     accepted: חייב באישור
+  #     blank: לא יכול להיות ריק
+  #     confirmation: לא תואם לאישורו
+  #     empty: לא יכול להיות ריק
+  #     equal_to: חייב להיות שווה ל- %{count}
+  #     even: חייב להיות זוגי
+  #     exclusion: לא זמין
+  #     greater_than: חייב להיות גדול מ- %{count}
+  #     greater_than_or_equal_to: חייב להיות גדול או שווה ל- %{count}
+  #     inclusion: לא נכלל ברשימה
+  #     invalid: לא תקין
+  #     less_than: חייב להיות קטן מ- %{count}
+  #     less_than_or_equal_to: חייב להיות קטן או שווה ל- %{count}
+  #     not_a_number: חייב להיות מספר
+  #     not_an_integer: חייב להיות מספר שלם
+  #     odd: חייב להיות אי זוגי
+  #     taken: כבר בשימוש
+  #     too_long: ארוך מדי (יותר מ- %{count} תווים)
+  #     too_short: קצר מדי (פחות מ- %{count} תווים)
+  #     wrong_length: לא באורך הנכון (חייב להיות %{count} תווים)
+  #   template:
+  #     body: 'אנא בדוק את השדות הבאים:'
+  #     header:
+  #       one: 'לא ניתן לשמור את ה%{model}: שגיאה אחת'
+  #       other: 'לא ניתן לשמור את ה%{model}: %{count} שגיאות.'
+  # helpers:
+  #   select:
+  #     prompt: נא לבחור
+  #   submit:
+  #     create: יצירת %{model}
+  #     submit: שמור %{model}
+  #     update: עדכון %{model}
+  # number:
+  #   currency:
+  #     format:
+  #       delimiter: ","
+  #       format: "%n %u"
+  #       precision: 2
+  #       separator: "."
+  #       significant: false
+  #       strip_insignificant_zeros: false
+  #       unit: "₪"
+  #   format:
+  #     delimiter: ","
+  #     precision: 3
+  #     separator: "."
+  #     significant: false
+  #     strip_insignificant_zeros: false
+  #   human:
+  #     decimal_units:
+  #       format: "%n %u"
+  #       units:
+  #         billion: מיליארד
+  #         million: מיליון
+  #         quadrillion: קודריליון
+  #         thousand: אלף
+  #         trillion: טריליון
+  #         unit: ''
+  #     format:
+  #       delimiter: ''
+  #       precision: 3
+  #       significant: true
+  #       strip_insignificant_zeros: true
+  #     storage_units:
+  #       format: "%n %u"
+  #       units:
+  #         byte:
+  #           one: בייט
+  #           other: בתים
+  #         gb: ג'יגה-בייט
+  #         kb: קילו-בייט
+  #         mb: מגה-בייט
+  #         tb: טרה-בייט
+  #   percentage:
+  #     format:
+  #       delimiter: ''
+  #   precision:
+  #     format:
+  #       delimiter: ''
+  # support:
+  #   array:
+  #     last_word_connector: " ו"
+  #     two_words_connector: " ו"
+  #     words_connector: ", "
+  # time:
+  #   am: am
+  #   formats:
+  #     default: "%a %d %b %H:%M:%S %Z %Y"
+  #     long: "%d ב%B, %Y %H:%M"
+  #     short: "%d %b %H:%M"
+  #   pm: pm
