Add favicon and home page design

--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -46,11 +46,13 @@ he:
 
   application:
     home_page:
-      title: "ברוכות הבאות למשחק: זה משנה הכל"
+      title: "זה משנה הכל: המשחק"
       description: "הקפיטליזם משמיד את כדור הארץ. חושבות שאתן יכולות להתמודד עם זה?"
       players: "כמה שחקנים ושחקניות:"
       new_game: "משחק חדש"
       minister_count: "עד %{count} שחקנים ושחקניות"
+      quote: "אנחנו בנקודה ייחודית בהיסטוריה שלנו. מעולם לא הייתה לנו כזאת מודעות למה שאנחנו עושים לכוכב הלכת, ומעולם לא היה לנו הכוח לעשות עם זה משהו. עתיד האנושות, וכל החיים על פני כדור הארץ תלויים בנו"
+      writer: " - דיוויד אטינבורו"
     game_over:
       new_game: "משחק חדש"
       title: "המשחק נגמר!"
