Add logo and button text to ministers

--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -51,7 +51,7 @@ he:
       players: "כמה שחקנים ושחקניות:"
       new_game: "משחק חדש"
       minister_count: "עד %{count} שחקנים ושחקניות"
-      quote: "אנחנו בנקודה ייחודית בהיסטוריה שלנו. מעולם לא הייתה לנו כזאת מודעות למה שאנחנו עושים לכוכב הלכת, ומעולם לא היה לנו הכוח לעשות עם זה משהו. עתיד האנושות, וכל החיים על פני כדור הארץ תלויים בנו"
+      quote: "אנו נמצאים בשלב ייחודי בהיסטוריה שלנו. מעולם לא הייתה לנו כזאת מודעות לגבי השלכות המעשים שלנו על הכדור, ומעולם לא היה לנו הכח לעשות משהו בנידון. עתיד האנושות, ועתיד כלל החיים על פני האדמה, תלוי כעת בנו."
       writer: " - דיוויד אטינבורו"
     game_over:
       new_game: "משחק חדש"
@@ -59,8 +59,10 @@ he:
   minister:
     index:
       start_game: "התחלה"
-      next: "הבא"
+      open_card: "פתיחת קלף שר/ה"
+      finished_reading: "סיימתי לקרוא"
       next_player: "שחקן הבא"
+      move_next_player: "נא להעביר לשחקנ/ית הבא/ה"
   event:
     show:
       choose_option: "בחירת אפשרות"
