--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -63,6 +63,8 @@ he:
       finished_reading: "סיימתי לקרוא"
       next_player: "שחקן הבא"
       move_next_player: "נא להעביר לשחקנ/ית הבא/ה"
+      goal: "המטרה האישית והסודית שלך"
+      description: "פירוט התפקיד הציבורי שלך"
   event:
     show:
       choose_option: "בחירת אפשרות"
@@ -125,131 +127,131 @@ he:
   #       username: 'Your username'
   #       password: '****'
   #
-  # activerecord:
-  #   errors:
-  #     messages:
-  #       record_invalid: 'האימות נכשל: %{errors}'
-  # date:
-  #   abbr_day_names:
-  #   - א
-  #   - ב
-  #   - ג
-  #   - ד
-  #   - ה
-  #   - ו
-  #   - ש
-  #   abbr_month_names:
-  #   -
-  #   - ינו
-  #   - פבר
-  #   - מרץ
-  #   - אפר
-  #   - מאי
-  #   - יונ
-  #   - יול
-  #   - אוג
-  #   - ספט
-  #   - אוק
-  #   - נוב
-  #   - דצמ
-  #   day_names:
-  #   - ראשון
-  #   - שני
-  #   - שלישי
-  #   - רביעי
-  #   - חמישי
-  #   - שישי
-  #   - שבת
-  #   formats:
-  #     default: "%d-%m-%Y"
-  #     long: "%e ב%B, %Y"
-  #     short: "%e %b"
-  #   month_names:
-  #   -
-  #   - ינואר
-  #   - פברואר
-  #   - מרץ
-  #   - אפריל
-  #   - מאי
-  #   - יוני
-  #   - יולי
-  #   - אוגוסט
-  #   - ספטמבר
-  #   - אוקטובר
-  #   - נובמבר
-  #   - דצמבר
-  #   order:
-  #   - :day
-  #   - :month
-  #   - :year
-  # datetime:
-  #   distance_in_words:
-  #     about_x_hours:
-  #       one: בערך שעה אחת
-  #       other: בערך %{count} שעות
-  #     about_x_months:
-  #       one: בערך חודש אחד
-  #       other: בערך %{count} חודשים
-  #     about_x_years:
-  #       one: בערך שנה אחת
-  #       other: בערך %{count} שנים
-  #     almost_x_years:
-  #       one: כמעט שנה
-  #       other: כמעט %{count} שנים
-  #     half_a_minute: חצי דקה
-  #     less_than_x_seconds:
-  #       zero: פחות משניה אחת
-  #       one: פחות משניה אחת
-  #       other: פחות מ- %{count} שניות
-  #     less_than_x_minutes:
-  #       zero: פחות מדקה אחת
-  #       one: פחות מדקה אחת
-  #       other: פחות מ- %{count} דקות
-  #     over_x_years:
-  #       one: מעל שנה אחת
-  #       other: מעל %{count} שנים
-  #     x_seconds:
-  #       one: שניה אחת
-  #       other: "%{count} שניות"
-  #     x_minutes:
-  #       one: דקה אחת
-  #       other: "%{count} דקות"
-  #     x_days:
-  #       one: יום אחד
-  #       other: "%{count} ימים"
-  #     x_months:
-  #       one: חודש אחד
-  #       other: "%{count} חודשים"
-  #   prompts:
-  #     second: שניות
-  #     minute: דקה
-  #     hour: שעה
-  #     day: יום
-  #     month: חודש
-  #     year: שנה
-  # errors:
-  #   format: "%{attribute} %{message}"
-  #   messages:
-  #     accepted: חייב באישור
-  #     blank: לא יכול להיות ריק
-  #     confirmation: לא תואם לאישורו
-  #     empty: לא יכול להיות ריק
-  #     equal_to: חייב להיות שווה ל- %{count}
-  #     even: חייב להיות זוגי
-  #     exclusion: לא זמין
-  #     greater_than: חייב להיות גדול מ- %{count}
-  #     greater_than_or_equal_to: חייב להיות גדול או שווה ל- %{count}
-  #     inclusion: לא נכלל ברשימה
-  #     invalid: לא תקין
-  #     less_than: חייב להיות קטן מ- %{count}
-  #     less_than_or_equal_to: חייב להיות קטן או שווה ל- %{count}
-  #     not_a_number: חייב להיות מספר
-  #     not_an_integer: חייב להיות מספר שלם
-  #     odd: חייב להיות אי זוגי
-  #     taken: כבר בשימוש
-  #     too_long: ארוך מדי (יותר מ- %{count} תווים)
-  #     too_short: קצר מדי (פחות מ- %{count} תווים)
-  #     wrong_length: לא באורך הנכון (חייב להיות %{count} תווים)
+  activerecord:
+    errors:
+      messages:
+        record_invalid: 'האימות נכשל: %{errors}'
+  date:
+    abbr_day_names:
+    - א
+    - ב
+    - ג
+    - ד
+    - ה
+    - ו
+    - ש
+    abbr_month_names:
+    -
+    - ינו
+    - פבר
+    - מרץ
+    - אפר
+    - מאי
+    - יונ
+    - יול
+    - אוג
+    - ספט
+    - אוק
+    - נוב
+    - דצמ
+    day_names:
+    - ראשון
+    - שני
+    - שלישי
+    - רביעי
+    - חמישי
+    - שישי
+    - שבת
+    formats:
+      default: "%d-%m-%Y"
+      long: "%e ב%B, %Y"
+      short: "%e %b"
+    month_names:
+    -
+    - ינואר
+    - פברואר
+    - מרץ
+    - אפריל
+    - מאי
+    - יוני
+    - יולי
+    - אוגוסט
+    - ספטמבר
+    - אוקטובר
+    - נובמבר
+    - דצמבר
+    order:
+    - :day
+    - :month
+    - :year
+  datetime:
+    distance_in_words:
+      about_x_hours:
+        one: בערך שעה אחת
+        other: בערך %{count} שעות
+      about_x_months:
+        one: בערך חודש אחד
+        other: בערך %{count} חודשים
+      about_x_years:
+        one: בערך שנה אחת
+        other: בערך %{count} שנים
+      almost_x_years:
+        one: כמעט שנה
+        other: כמעט %{count} שנים
+      half_a_minute: חצי דקה
+      less_than_x_seconds:
+        zero: פחות משניה אחת
+        one: פחות משניה אחת
+        other: פחות מ- %{count} שניות
+      less_than_x_minutes:
+        zero: פחות מדקה אחת
+        one: פחות מדקה אחת
+        other: פחות מ- %{count} דקות
+      over_x_years:
+        one: מעל שנה אחת
+        other: מעל %{count} שנים
+      x_seconds:
+        one: שניה אחת
+        other: "%{count} שניות"
+      x_minutes:
+        one: דקה אחת
+        other: "%{count} דקות"
+      x_days:
+        one: יום אחד
+        other: "%{count} ימים"
+      x_months:
+        one: חודש אחד
+        other: "%{count} חודשים"
+    prompts:
+      second: שניות
+      minute: דקה
+      hour: שעה
+      day: יום
+      month: חודש
+      year: שנה
+  errors:
+    format: "%{attribute} %{message}"
+    messages:
+      accepted: חייב באישור
+      blank: לא יכול להיות ריק
+      confirmation: לא תואם לאישורו
+      empty: לא יכול להיות ריק
+      equal_to: חייב להיות שווה ל- %{count}
+      even: חייב להיות זוגי
+      exclusion: לא זמין
+      greater_than: חייב להיות גדול מ- %{count}
+      greater_than_or_equal_to: חייב להיות גדול או שווה ל- %{count}
+      inclusion: לא נכלל ברשימה
+      invalid: לא תקין
+      less_than: חייב להיות קטן מ- %{count}
+      less_than_or_equal_to: חייב להיות קטן או שווה ל- %{count}
+      not_a_number: חייב להיות מספר
+      not_an_integer: חייב להיות מספר שלם
+      odd: חייב להיות אי זוגי
+      taken: כבר בשימוש
+      too_long: ארוך מדי (יותר מ- %{count} תווים)
+      too_short: קצר מדי (פחות מ- %{count} תווים)
+      wrong_length: לא באורך הנכון (חייב להיות %{count} תווים)
   #   template:
   #     body: 'אנא בדוק את השדות הבאים:'
   #     header:
