hide goal from instructions

--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -12,7 +12,7 @@ he:
       instructions_html: "<h2>מטרה</h2> לנהל את המדינה בצורה הטובה ביותר לנוכח משבר האקלים.<br><hr>
 <h2>מהלך</h2>
 <ol class='pr-5 pl-2'>
-<li><b>ברכותי! אתם הממשלה החדשה!</b> כל אחד מכן שר עם תפקיד ציבורי ומטרה סודית.</li>
+<li><b>ברכותי! אתם הממשלה החדשה!</b> כל אחד מכן שר עם תפקיד ציבורי</li>
 <li><b>צרו את המדינה שלכן!</b>  תנו לה שם ובחרו באיזה תחומים חשוב לכן להשקיע. הבחירות שלכן ישפיעו על המשך המשחק. התקציב שאתן מקבלות ישמש אתכן למהלך כל המשחק, השתמשו בו בחוכמה.</li>
 <li><b>בכל תור</b> יקרה אסון בגלל משבר האקלים, ותצטרכו לבחור איך להתמודד איתו. בנוסף, ההתחממות עולה, ואסונות יותר קשים עלולים לקרות!</li>
 <li><b>מלחמה:</b>  אם היחסים האזוריים מדרדרים נכנסים למלחמה, אם החוסן החברתי מדרדר, נכנסים למלחמת אזרחים. במלחמה או מלחמת אזרחים, כל תור מתים אזרחים ויורד התקציב.</li></ol><hr>
