--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -9,7 +9,7 @@ he:
       minister_count: "עד %{count} שחקנים ושחקניות"
       quote: "אנו נמצאים בשלב ייחודי בהיסטוריה שלנו. מעולם לא הייתה לנו כזאת מודעות לגבי השלכות המעשים שלנו על הכדור, ומעולם לא היה לנו הכח לעשות משהו בנידון. עתיד האנושות, ועתיד כלל החיים על פני האדמה, תלוי כעת בנו."
       writer: " - דיוויד אטינבורו"
-      instructions_html: "<h2>מטרה</h2> לנהל את המדינה בצורה הטובה ביותר לנוכח משבר האקלים.<br><hr>
+      instructions_html: "<h2>מטרה</h2> לנהל את המדינה בצורה הטובה ביותר לנוכח משבר האקלים. מישהי אחת צריכה להיות עם הטלפון ולנהל את המשחק - היא המאסטרית!<br><hr>
 <h2>מהלך</h2>
 <ol class='pr-5 pl-2'>
 <li><b>ברכותי! אתם הממשלה החדשה!</b> כל אחד מכן שר עם תפקיד ציבורי</li>
