--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -35,7 +35,7 @@ he:
     show:
       choose_option: "בחירת אפשרות"
       consequense: "השלכה"
-      lose: "זהו, ויתרנו. נפסיד וחלאס"
+      quit: "זהו, ויתרנו. נפסיד וחלאס"
       requirements: "דרישות מינימום"
       million: "מיליון"
       ceiling: "כבר על המקסימום"
@@ -59,6 +59,7 @@ he:
       score_num: "%{count}"
       points: "נקודות"
       no_more_events: "צלחתם את כל האסונות!"
+      quit: "בחרתם לסיים את המשחק באמצע. חבל, אתם מפספסים אחלה אסונות..."
   navbar:
     wars: "אזרחים מתים ותקציב מבוזבז"
 
