--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -9,19 +9,22 @@ he:
       minister_count: "עד %{count} שחקנים ושחקניות"
       quote: "אנו נמצאים בשלב ייחודי בהיסטוריה שלנו. מעולם לא הייתה לנו כזאת מודעות לגבי השלכות המעשים שלנו על הכדור, ומעולם לא היה לנו הכח לעשות משהו בנידון. עתיד האנושות, ועתיד כלל החיים על פני האדמה, תלוי כעת בנו."
       writer: " - דיוויד אטינבורו"
-      instructions_html: "<h2>מטרה</h2> לנהל את המדינה בצורה הטובה ביותר לנוכח משבר האקלים. מישהי אחת צריכה להיות עם הטלפון ולנהל את המשחק - היא המאסטרית!<br><hr>
+      instructions_html: "<h2>רקע</h2>
+המשחק מדמה מצב בו אנחנו ממשיכים כרגיל ולא מונעים את הדרדרות משבר האקלים. כל האסונות במשחק קורים היום או יכולים לקרות בעתיד, אם לא נתמודד עם המשבר. המשחק מציג מציאות עגומה אבל בסוף יש תקווה.
+<hr>
+<h2>מטרה</h2>היו לנו כל כך הרבה אפשרויות לעשות שינוי ובחרנו להתעלם. אתם ואתן, בתור הממשלה החדשה, צריכים להתמודד עם המצב.<br><hr>
 <h2>מהלך</h2>
 <ol class='pr-5 pl-2'>
-<li><b>ברכותי! אתם הממשלה החדשה!</b> כל אחד מכן שר עם תפקיד ציבורי</li>
+<li><b>ברכותי! אתם הממשלה החדשה!</b> כל אחד ואחת מכן שר/שרה.</li>
 <li><b>צרו את המדינה שלכן!</b>  תנו לה שם ובחרו באיזה תחומים חשוב לכן להשקיע. הבחירות שלכן ישפיעו על המשך המשחק. התקציב שאתן מקבלות ישמש אתכן למהלך כל המשחק, השתמשו בו בחוכמה.</li>
-<li><b>בכל תור</b> יקרה אסון בגלל משבר האקלים, ותצטרכו לבחור איך להתמודד איתו. בנוסף, ההתחממות עולה, ואסונות יותר קשים עלולים לקרות!</li>
-<li><b>מלחמה:</b>  אם היחסים האזוריים מדרדרים נכנסים למלחמה, אם החוסן החברתי מדרדר, נכנסים למלחמת אזרחים. במלחמה או מלחמת אזרחים, כל תור מתים אזרחים ויורד התקציב.</li></ol><hr>
-<h2>איך מנצחים?</h2> המשחק מדמה מציאות שבה אנחנו ממשיכים כרגיל ולא פותרים את המשבר מהשורש. לכן, אין מנצחים, רק מפסידים, המטרה שלכן היא להפסיד עם התוצאה הטובה ביותר. בסוף תוכלו לראות את התוצאה ולבחון את הבחירות שעשיתן.<hr>
-<h2>איך מפסידים?</h2> <ul>
+<li><b>בכל תור</b> יקרה אסון בגלל משבר האקלים, ותצטרכו לבחור איך להתמודד איתו. פעם בעשר שנים, תקבלו מיליון דולר ממסים. בנוסף, ההתחממות עולה, ואסונות יותר קשים עלולים לקרות!</li>
+<li><b>מלחמה:</b>  אם היחסים האזוריים מדרדרים נכנסים למלחמה.  אם החוסן החברתי מדרדר, נכנסים למלחמת אזרחים. במלחמה או מלחמת אזרחים, כל תור מתים אזרחים ויורד התקציב.</li></ol><hr>
+<h2>איך נגמר המשחק?</h2> <ul>
 <li>אם כל האזרחים מתים.</li>
 <li>אם נגמר התקציב בזמן מלחמה או מלחמת אזרחים.</li>
-<li>אם אי אפשר לבחור באף אחת מהאפשרויות וחייבים לוותר.</li></ul>"
-
+<li>אם אי אפשר לבחור באף אחת מהאפשרויות וחייבים לוותר.</li></ul><hr>
+<h2>ניצחון</h2> בסוף המשחק תקבלו תוצאה מ-1 עד 100 שהיא שקלול כמות האזרחים שנשארו בחיים, כמה שנים שרדתם וכמה השקעתם בתשתיות המדינה. תוכלו לראות את התוצאה, לבחון את הבחירות שעשיתן ולקבל השראה לגבי מה אפשר לעשות היום כדי לא להגיע למצב המוצג במשחק.
+"
   minister:
     index:
       start_game: "התחלה"
