master in instructions

--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -10,7 +10,7 @@ he:
       quote: "אנו נמצאים בשלב ייחודי בהיסטוריה שלנו. מעולם לא הייתה לנו כזאת מודעות לגבי השלכות המעשים שלנו על הכדור, ומעולם לא היה לנו הכח לעשות משהו בנידון. עתיד האנושות, ועתיד כלל החיים על פני האדמה, תלוי כעת בנו."
       writer: " - דיוויד אטינבורו"
       instructions_html: "<h2>רקע</h2>
-המשחק מדמה מצב בו אנחנו ממשיכים כרגיל ולא מונעים את הדרדרות משבר האקלים. כל האסונות במשחק קורים היום או יכולים לקרות בעתיד, אם לא נתמודד עם המשבר. המשחק מציג מציאות עגומה אבל בסוף יש תקווה.
+המשחק מדמה מצב בו אנחנו ממשיכים כרגיל ולא מונעים את הדרדרות משבר האקלים. כל האסונות במשחק קורים היום או יכולים לקרות בעתיד, אם לא נתמודד עם המשבר. המשחק מציג מציאות עגומה אבל בסוף יש תקווה. <br><b> מישהי אחת צריכה להיות עם הטלפון ולנהל את המשחק - היא המאסטרית!</b>
 <hr>
 <h2>מטרה</h2>היו לנו כל כך הרבה אפשרויות לעשות שינוי ובחרנו להתעלם. אתם ואתן, בתור הממשלה החדשה, צריכים להתמודד עם המצב.<br><hr>
 <h2>מהלך</h2>
