Add is_everyone_dead and is_out_of_money to countries

--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -63,6 +63,8 @@ he:
       points: "נקודות"
       no_more_events: "צלחתם את כל האסונות!"
       quit: "בחרתם לסיים את המשחק באמצע. חבל, אתם מפספסים אחלה אסונות..."
+      everyone_dead: "כל האזרחים והאזרחיות שלכם מתים. מה עכשיו?"
+      out_of_money: "זהו. אין לכן מספיק כסף כדי לנהל את המדינה..."
   navbar:
     wars: "אזרחים מתים ותקציב מבוזבז"
 
