--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -63,6 +63,7 @@ he:
       points: "נקודות"
       no_more_events: "צלחתם את כל האסונות!"
       quit: "בחרתם לסיים את המשחק באמצע. חבל, אתם מפספסים אחלה אסונות..."
+      more_then: "טוב יותר מ %{count}% מהמשחקים"
   navbar:
     wars: "אזרחים מתים ותקציב מבוזבז"
 
