hope in game over

--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -66,6 +66,25 @@ he:
       more_then: "טוב יותר מ %{count}% מהמשחקים"
       everyone_dead: "כל האזרחים והאזרחיות שלכם מתים. מה עכשיו?"
       out_of_money: "זהו. אין לכן מספיק כסף כדי לנהל את המדינה..."
+      hope: "יש תקווה!"
+      close: "סגירה"
+      alternative: "המציאות הקיימת היא רק אפשרות אחת מתוך שלל האפשרויות שטרם מוצו"
+      economy: "אנחנו לא חייבים להגיע לעולם המוצג במשחק. זה יכול להיות אחרת. אם נפעל יחד היום נגד המשבר ובעד כלכלה בת-קיימא, שלא מבוססת על צמיחה אינסופית שמונעת על ידי תאוות בצע, נוכל לחיות חיים טובים גם ב2050 ולמלא את הריאות שלנו באוויר נקי."
+      what_to_do: "מה אפשר לעשות? מקורות השראה ומידע"
+      xr: "תנועת המרד בהכחדה"
+      xr_exp: "תנועה חברתית-פוליטית המשתמשת בהתנגדות לא אלימה כדי למחות כנגד משבר האקלים"
+      tree: "עץבעיר"
+      tree_exp: "עסק חברתי עצמאי לחקר והפצה של אקולוגיה עירונית ולהתמודדות עם משבר האקלים"
+      change: "תכנית שינוי כיוון 2020"
+      this_changes: "זה משנה הכל"
+      eco_wiki: "ספר של נעמי קליין מתוך אקו-ויקי, מקור מעולה למידע על משבר האקלים"
+      freiburg: "פרייבורג"
+      air: "חוק אוויר נקי"
+      new_deal: "תוכנית הגרין ניו דיל"
+      new_deal_exp: "של אלכסנדריה אוקסיו קורטז וברני סנדרס"
+      greta: "גרטה ת'ונברג"
+      story: "The Story of Solution"
+      story_exp: "סרטון מגניב על איך צריך לחשוב על פתרונות למשבר"
   navbar:
     wars: "אזרחים מתים ותקציב מבוזבז"
 
