--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -76,15 +76,18 @@ he:
       tree: "עץבעיר"
       tree_exp: "עסק חברתי עצמאי לחקר והפצה של אקולוגיה עירונית ולהתמודדות עם משבר האקלים"
       change: "תכנית שינוי כיוון 2020"
+      change_exp: "תכנית מעשית וישימה להתמודדות ישראל עם משבר האקלים"
       this_changes: "זה משנה הכל"
       eco_wiki: "ספר של נעמי קליין מתוך אקו-ויקי, מקור מעולה למידע על משבר האקלים"
       freiburg: "פרייבורג"
       air: "חוק אוויר נקי"
       new_deal: "תוכנית הגרין ניו דיל"
-      new_deal_exp: "של אלכסנדריה אוקסיו קורטז וברני סנדרס"
+      new_deal_exp: "של אלכסנדריה אוקסיו קורטז, נעמי קליין וברני סנדרס"
       greta: "גרטה ת'ונברג"
       story: "The Story of Solution"
-      story_exp: "סרטון מגניב על איך צריך לחשוב על פתרונות למשבר"
+      story_exp: "סרטון מגניב על איך צריך לחשוב על פתרונות למשבר האקלים"
+      hashomer: "עמדת תנועת השומר הצעיר בנושא צדק סביבתי"
+      hashomer_exp: "נכתב ע''י מנהיגות חניכים וחניכות ארצית אחרי סמינר של השכבות הבוגרות של התנועה בנושא משבר האקלים וצדק סביבתי"
   navbar:
     wars: "אזרחים מתים ותקציב מבוזבז"
 
