--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -9,6 +9,25 @@ he:
       minister_count: "עד %{count} שחקנים ושחקניות"
       quote: "אנו נמצאים בשלב ייחודי בהיסטוריה שלנו. מעולם לא הייתה לנו כזאת מודעות לגבי השלכות המעשים שלנו על הכדור, ומעולם לא היה לנו הכח לעשות משהו בנידון. עתיד האנושות, ועתיד כלל החיים על פני האדמה, תלוי כעת בנו."
       writer: " - דיוויד אטינבורו"
+      background_title: "רקע"
+      background_html: "המשחק מדמה מצב בו אנחנו ממשיכים כרגיל ולא מונעים את הדרדרות משבר האקלים. כל האסונות במשחק יכולים לקרות אם לא נתמודד עם המשבר. המשחק מציג מציאות עגומה אבל בסוף יש תקווה."
+      goal_title: "מטרה"
+      goal: "היו לנו כל כך הרבה אפשרויות לעשות שינוי ובחרנו להתעלם. אתם ואתן, בתור הממשלה החדשה, צריכים להתמודד עם המצב."
+      course_title: "מהלך"
+      course_html: "<ol class='pr-5 pl-2'>
+      <li><b>ברכותי! אתם הממשלה החדשה!</b> כל אחד ואחת מכן שר/שרה.</li>
+      <li><b>צרו את המדינה שלכן!</b>  תנו לה שם ובחרו באיזה תחומים חשוב לכן להשקיע. הבחירות שלכן ישפיעו על המשך המשחק. התקציב שאתן מקבלות ישמש אתכן למהלך כל המשחק, השתמשו בו בחוכמה.</li>
+      <li><b>בכל תור</b> יקרה אסון בגלל משבר האקלים, ותצטרכו לבחור איך להתמודד איתו. פעם בעשר שנים, תקבלו מיליון דולר ממסים. בנוסף, ההתחממות עולה, ואסונות יותר קשים עלולים לקרות!</li>
+      <li><b>מלחמה:</b>  אם היחסים האזוריים מדרדרים נכנסים למלחמה.  אם החוסן החברתי מדרדר, נכנסים למלחמת אזרחים. במלחמה או מלחמת אזרחים, כל תור מתים אזרחים ויורד התקציב.</li></ol>"
+      end_title: "איך נגמר המשחק"
+      end_html: "<ul>
+                 <li>אם כל האזרחים מתים.</li>
+                 <li>אם נגמר התקציב בזמן מלחמה או מלחמת אזרחים.</li>
+                 <li>אם אי אפשר לבחור באף אחת מהאפשרויות וחייבים לוותר.</li></ul>"
+      win_title: "ניצחון"
+      win: "בסוף המשחק תקבלו תוצאה מ-1 עד 100 שהיא שקלול כמות האזרחים שנשארו בחיים, כמה שנים שרדתם וכמה השקעתם בתשתיות המדינה. תוכלו לראות את התוצאה, לבחון את הבחירות שעשיתן ולקבל השראה לגבי מה אפשר לעשות היום כדי לא להגיע למצב המוצג במשחק."
+      instructions: "הוראות"
+      close: "סגירה"
       instructions_html: "<h2>רקע</h2>
 המשחק מדמה מצב בו אנחנו ממשיכים כרגיל ולא מונעים את הדרדרות משבר האקלים. כל האסונות במשחק קורים היום או יכולים לקרות בעתיד, אם לא נתמודד עם המשבר. המשחק מציג מציאות עגומה אבל בסוף יש תקווה. <br><b> מישהי אחת צריכה להיות עם הטלפון ולנהל את המשחק - היא המאסטרית!</b>
 <hr>
@@ -34,6 +53,8 @@ he:
       move_next_player: "נא להעביר לשחקנ/ית הבא/ה"
       goal: "המטרה האישית והסודית שלך"
       description: "פירוט התפקיד הציבורי שלך"
+      list: "רשימת השרים"
+      choose: "כל אחד ואחת צריכים לבחור איזה שר הם"
   event:
     show:
       choose_option: "בחירת אפשרות"
