desktop almost done

--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -111,7 +111,13 @@ he:
       hashomer_exp: "נכתב ע''י מנהיגות חניכים וחניכות ארצית אחרי סמינר של השכבות הבוגרות של התנועה בנושא משבר האקלים וצדק סביבתי"
   navbar:
     wars: "אזרחים מתים ותקציב מבוזבז"
-
+  sidebar:
+    deg: "התחממות"
+    civ: "אזרחים"
+    million: "מיליון"
+    year: "שנה"
+    budget: "תקציב"
+    dollar: "מיליון דולר"
 
   # simple_form:
   #   errors:
