only game over remain

--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -105,7 +105,7 @@ he:
       new_deal: "תוכנית הגרין ניו דיל"
       new_deal_exp: "של אלכסנדריה אוקסיו קורטז, נעמי קליין וברני סנדרס"
       greta: "גרטה ת'ונברג"
-      story: "The Story of Solution"
+      story: "The Story of Solutions"
       story_exp: "סרטון מגניב על איך צריך לחשוב על פתרונות למשבר האקלים"
       hashomer: "עמדת תנועת השומר הצעיר בנושא צדק סביבתי"
       hashomer_exp: "נכתב ע''י מנהיגות חניכים וחניכות ארצית אחרי סמינר של השכבות הבוגרות של התנועה בנושא משבר האקלים וצדק סביבתי"
